syntax = "proto3";
option java_multiple_files = true;
option java_package = "via.sep3.grpcserver.protobuf.carservices";

service CarServices{
  rpc createCar(RequestCarInfo) returns (ResponseCarInfo);
  rpc getCarByDriverId(DriverIdInfo)returns(ResponseCarInfo);
}
message DriverIdInfo{
  string driver_id =1;
}

message RequestCarInfo{
  string model = 1;
  string color = 2;
  string plate_number = 3;
  int32 seats_count = 4;
  string fuel_type = 5;
  string driver_id= 6;
  string drive_license = 7;
}
message ResponseCarInfo{
  string model = 1;
  string color = 2;
  string plate_number = 3;
  int32 seats_count = 4;
  string fuel_type = 5;
}
message ErrorResponse{
  int32 status = 1;
  string message = 2;
}